adjust spacing for cart to be more globally consistent, fixes #56

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -23,6 +23,10 @@
       padding: 10px
 
       @media screen and (max-width: $break-small)
+        height: 97px
+        padding: 23px 0 32px
+        margin: 0 32px
+
         &:first-child
           border-top: none
 
@@ -120,8 +124,6 @@
 
     .discount
       @media screen and (max-width: $break-small)
-        padding: 0 16px
-
         .col1,
         .col2
           float: left
@@ -150,8 +152,6 @@
 
     .shipping
       @media screen and (max-width: $break-small)
-        padding: 0 16px
-
         .col1,
         .col2
           float: left
@@ -165,8 +165,6 @@
       font-weight: 700
 
       @media screen and (max-width: $break-small)
-        padding: 0 16px
-
         .col1,
         .col2,
         .label
